--- a/lang/polish.lng
+++ b/lang/polish.lng
@@ -1,2 +1,2 @@
 ##grflangid 0x30
-STR_GENERAL_DESC        :OpenMSX to zestaw zastępujący utwory muzyczne w OpenTTD. Dostępny na warunkach licencji GNU General Public License versja 2. Lista wszystkich autorów znajduje się w pliku "readme.txt".OpenMSX erstattar musikken i OpenTTD. Fritt tilgjengeleg under vilkåra i GNU General Public License versjon 2. For fulle akkrediteringar sjå "readme.txt".
+STR_GENERAL_DESC        :OpenMSX to zestaw zastępujący utwory muzyczne w OpenTTD. Dostępny na warunkach licencji GNU GPL wersja 2. Lista wszystkich autorów znajduje się w pliku "readme.txt" [{TITLE}]
