Update: Translations id_ID: 1 change by UseYourIllusion

--- a/lang/indonesian.lng
+++ b/lang/indonesian.lng
@@ -1,2 +1,2 @@
 ##grflangid 0x5a
-STR_GENERAL_DESC        :Setelan dasar musik pengiring OpenMSX untuk OpenTTD. Ingyenesen hozzáférhető a GNU General Public License 2-es verziójának feltételeivel. Untuk selengkapnya lihat "readme.txt". [{TITLE}]
+STR_GENERAL_DESC        :Setelan penggantian dasar musik pengiring OpenMSX untuk OpenTTD. Tersedia secara bebas di bawah lisensi GPL v2. Untuk selengkapnya lihat "readme.txt". [{TITLE}]
