--- a/lang/traditional_chinese.lng
+++ b/lang/traditional_chinese.lng
@@ -1,2 +1,2 @@
 ##grflangid 0x0c
-STR_GENERAL_DESC        :供 OpenTTD 使用的 OpenMSX 音樂替代計畫的音樂集。在 GNU General Public License 第 2 版授權下可免費使用。完整感謝清單請見 "readme.txt"。 [{TITLE}]
+STR_GENERAL_DESC        :OpenMSX 是一套供 OpenTTD 使用、代替 TTD 原裝音樂的音樂集。在 GNU 通用公共授權條款版本 2 之授權下可自由使用。如欲觀看完整的鳴謝清單，請參閱 "readme.txt"。 [{TITLE}]
