--- a/lang/danish.lng
+++ b/lang/danish.lng
@@ -1,2 +1,3 @@
 ##grflangid 0x2d
+##plural 0
 STR_GENERAL_DESC        :OpenMSX-musikerstatningssæt til OpenTTD. Frit tilgængeligt under termerne for GNU General Public License version 2. For den fuldstændige kreditering, se "readme.txt" [{TITLE}]
