--- a/lang/hungarian.lng
+++ b/lang/hungarian.lng
@@ -1,2 +1,4 @@
 ##grflangid 0x24
+##plural 2
+##case t ba
 STR_GENERAL_DESC        :OpenMSX zenei alapcsomag az OpenTTD-hez. Ingyenesen hozzáférhető a GPL v2 feltételeivel. A teljes listához lásd a "readme.txt" fájlt. [{TITLE}]
