--- a/lang/indonesian.lng
+++ b/lang/indonesian.lng
@@ -1,2 +1,3 @@
 ##grflangid 0x5a
+##plural 1
 STR_GENERAL_DESC        :Setelan penggantian dasar musik pengiring OpenMSX untuk OpenTTD. Tersedia secara bebas di bawah lisensi GPL v2. Untuk selengkapnya lihat "readme.txt". [{TITLE}]
