--- a/lang/romanian.lng
+++ b/lang/romanian.lng
@@ -1,2 +1,3 @@
 ##grflangid 0x28
+##plural 0
 STR_GENERAL_DESC        :Setul de muzică OpenMSX pentru OpenTTD. Disponibil gratuit sub termenii licenţei GNU General Public License versiunea 2. Pentru o lista completă de credite, citiţi fişierul "readme.txt".OpenMSX erstattar musikken i OpenTTD. Fritt tilgjengeleg under vilkåra i GNU General Public License versjon 2. For fulle akkrediteringar sjå "readme.txt".
