--- a/lang/afrikaans.lng
+++ b/lang/afrikaans.lng
@@ -1,2 +1,4 @@
 ##grflangid 0x1b
+##plural 0
+##gender male
 STR_GENERAL_DESC        :OpenMSX musiek vervanging stel vir OpenTTD. Vrylik beskikbaar onder die terms van die GNU General Public License weergawe 2. Vir voledige erkennings kyk na "readme.txt". [{TITLE}]
