--- a/lang/bulgarian.lng
+++ b/lang/bulgarian.lng
@@ -1,2 +1,5 @@
 ##grflangid 0x18
+##plural 0
+##gender p n m f
+##case p n m f
 STR_GENERAL_DESC        :OpenMSX музикален пакет за OpenTTD. Свободен за разпространение по условията на GNU General Public License версия 2. Повече информация виж "readme.txt". [{TITLE}]
