--- a/lang/english_US.lng
+++ b/lang/english_US.lng
@@ -1,2 +1,3 @@
 ##grflangid 0x00
+##plural 0
 STR_GENERAL_DESC        :OpenMSX music replacement set for OpenTTD. Freely available under the terms of the GNU General Public License version 2. For full credits see "readme.txt" [{TITLE}]
