--- a/lang/finnish.lng
+++ b/lang/finnish.lng
@@ -1,2 +1,3 @@
 ##grflangid 0x35
+##plural 0
 STR_GENERAL_DESC        :OpenMSX-musiikkipaketti OpenTTD:lle. Vapaasti saatavilla GPL v2-lisenssillä. Kaikki tekijät "readme.txt"-tiedostossa. [{TITLE}]
