--- a/lang/gaelic.lng
+++ b/lang/gaelic.lng
@@ -1,2 +1,5 @@
 ##grflangid 0x13
+##plural 13
+##gender m f
+##case dat nom gen voc
 STR_GENERAL_DESC        :Seata a chuireas ceòl OpenMSX an àite airson OpenTTD. Tha seo ri fhaighinn saor ’s an asgaidh fo theirmichean GNU General Public License tionndadh 2. Airson fiosrachadh cliùtha iomlain, faic “readme.txt”. [{TITLE}]
