--- a/lang/italian.lng
+++ b/lang/italian.lng
@@ -1,2 +1,5 @@
 ##grflangid 0x27
+##plural 0
+##gender ma m f
+##case fp fs mp ms
 STR_GENERAL_DESC        :Pacchetto musicale sostitutivo OpenMSX per OpenTTD.. Liberamente disponibile secondo i termini della Licenza Pubblica Generica (GPL) GNU versione 2. Per l'elenco completo dei riconoscimenti, si veda "readme.txt". [{TITLE}]
