--- a/lang/norwegian_bokmal.lng
+++ b/lang/norwegian_bokmal.lng
@@ -1,2 +1,5 @@
 ##grflangid 0x2f
+##plural 0
+##gender feminine masculine neuter
+##case small
 STR_GENERAL_DESC        :OpenMSX erstatter musikken i OpenTTD. Fritt tilgjengelig under betingelsene i GPL v2. For fulle akkrediteringer se "readme.txt". [{TITLE}]
