--- a/lang/russian.lng
+++ b/lang/russian.lng
@@ -1,2 +1,5 @@
 ##grflangid 0x07
+##plural 6
+##gender p n m f
+##case acc nom pre f abl m n dat p gen
 STR_GENERAL_DESC        :OpenMSX представляет собой набор музыкального оформления для OpenTTD. Свободно распространяется в соответствии с лицензией GNU General Public License version 2. Более подробную информацию о создателях набора можно узнать в документе "readme.txt" [{TITLE}]
