--- a/lang/slovak.lng
+++ b/lang/slovak.lng
@@ -1,2 +1,5 @@
 ##grflangid 0x16
+##plural 10
+##gender s z m
+##case g
 STR_GENERAL_DESC        :OpenMSX, náhradná sada hudby pre OpenTTD. Voľne dostupná pod licenciou GPL v2. Viac informácií nájdete v súbore "readme.txt" [{TITLE}]
