--- a/lang/swedish.lng
+++ b/lang/swedish.lng
@@ -1,2 +1,3 @@
 ##grflangid 0x2e
+##plural 0
 STR_GENERAL_DESC        :Musikpaketet OpenMSX för OpenTTD. Fritt tillgängligt enligt villkoren för GNU General Public License version 2 licensen. För samtliga medverkande se "readme.txt". [{TITLE}]
