--- a/lang/turkish.lng
+++ b/lang/turkish.lng
@@ -1,2 +1,4 @@
 ##grflangid 0x3e
+##plural 1
+##case tamlanan
 STR_GENERAL_DESC        :OpenTTD için OpenMSX müzik değişim kümesi. GNU Genel Kamu Lisansı sürüm 2 maddeleri kapsamında serbestçe edinilebilir. Hazırlayanların tam listesi için "readme.txt" dosyasına bakın. [{TITLE}]
