--- a/lang/german.lng
+++ b/lang/german.lng
@@ -1,4 +1,4 @@
 ##grflangid 0x02
 ##plural 0
 ##gender p m w n
-STR_GENERAL_DESC        :OpenMSX Musik-Set für OpenTTD. Frei verfügbar unter der GNU General Public License in der Version 2. Die vollständigen Referenzen sind in "readme.txt". [{TITLE}]
+STR_GENERAL_DESC        :OpenMSX-Basismusikset für OpenTTD. Frei verfügbar unter der GNU General Public License in der Version 2. Die vollständigen Referenzen sind in „readme.txt“. [{TITLE}]
