--- a/lang/english.lng
+++ b/lang/english.lng
@@ -1,3 +1,3 @@
 ##grflangid 0x01
-STR_GENERAL_DESC        :OpenMSX music replacement set for OpenTTD. Freely available under the terms of the GPL v2. For full credits see "readme.txt" [{TITLE}]
+STR_GENERAL_DESC        :OpenMSX base music set for OpenTTD. Freely available under the terms of the GPL v2. For full credits see "readme.txt" [{TITLE}]
 
