Update: Translations from eints portuguese: 1 change by azulcosta

--- a/lang/portuguese.lng
+++ b/lang/portuguese.lng
@@ -1,4 +1,4 @@
 ##grflangid 0x36
 ##plural 0
 ##gender fp f m mp n
-STR_GENERAL_DESC        :Conjunto de substituição de música OpenMSX para OpenTTD. Livremente disponível dentro dos termos da GNU General Public License versão 2. Para créditos completos ver "readme.txt" [{TITLE}]
+STR_GENERAL_DESC        :Conjunto de música base OpenMSX para OpenTTD. Disponível gratuitamente dentro dos termos da GNU General Public License versão 2. Para créditos completos ver "readme.txt" [{TITLE}]
