--- a/lang/dutch.lng
+++ b/lang/dutch.lng
@@ -1,3 +1,3 @@
 ##grflangid 0x1f
 ##plural 0
-STR_GENERAL_DESC        :OpenMSX muziek vervangingsset voor OpenTTD. Vrij verkrijgbaar onder de voorwaarden van de GPL v2 licentie. Voor meer informatie, zie "readme.txt". [{TITLE}]
+STR_GENERAL_DESC        :OpenMSX-basismuziekset voor OpenTTD. Vrij verkrijgbaar onder de voorwaarden van de GPL v2-licentie. Voor meer informatie, zie "readme.txt". [{TITLE}]
