--- a/lang/slovak.lng
+++ b/lang/slovak.lng
@@ -2,4 +2,4 @@
 ##plural 10
 ##gender s z m
 ##case g
-STR_GENERAL_DESC        :OpenMSX, náhradná sada hudby pre OpenTTD. Voľne dostupná pod licenciou GPL v2. Viac informácií nájdete v súbore "readme.txt" [{TITLE}]
+STR_GENERAL_DESC        :OpenMSX, základná sada hudby pre OpenTTD. Voľne dostupná pod licenciou GPL v2. Viac informácií nájdete v súbore "readme.txt" [{TITLE}]
