--- a/lang/korean.lng
+++ b/lang/korean.lng
@@ -1,4 +1,4 @@
 ##grflangid 0x3a
 ##plural 11
 ##gender m f
-STR_GENERAL_DESC        :OpenTTD용 OpenMSX 배경 음악 대체 세트입니다. GPL v2 약관 하에 자유롭게 사용하실 수 있습니다. 자세한 사항은 "readme.txt"을 읽어보십시오. [{TITLE}]
+STR_GENERAL_DESC        :OpenTTD용 OpenMSX 기본 배경 음악 세트입니다. GPL v2 약관 하에 자유롭게 사용하실 수 있습니다. 자세한 사항은 "readme.txt"을 읽어보십시오. [{TITLE}]
