Update: Translations from eints luxembourgish: 1 change by phreeze83

--- a/lang/luxembourgish.lng
+++ b/lang/luxembourgish.lng
@@ -1,3 +1,3 @@
 ##grflangid 0x23
 ##plural 0
-STR_GENERAL_DESC        :OpenMFX Musik Set fir OpenTTD. Gratis verfügbar ënnert derGPL v2 Lizenz. Fir all d'Credits, lies "readmet.txt". [{TITLE}]
+STR_GENERAL_DESC        :OpenMFX Musik Set fir OpenTTD. Gratis verfügbar ënnert derGPL v2 Lizenz. Fir all d'Credits, lies "readme.txt". [{TITLE}]
