Update: Translations from eints indonesian: 1 change by dimaspaf14 romanian: 1 change by kneekoo

--- a/lang/romanian.lng
+++ b/lang/romanian.lng
@@ -1,2 +1,3 @@
 ##grflangid 0x28
 ##plural 0
+STR_GENERAL_DESC        :Set de bază cu muzică OpenMSX pentru OpenTTD. Disponibil liber sub termenii Licenței Publice Generale GNU, versiunea 2. Pentru lista completă de credite, citiți fișierul "readme.txt". [{TITLE}]
