--- a/lang/tamil.lng
+++ b/lang/tamil.lng
@@ -1,3 +1,3 @@
 ##grflangid 0x0a
 ##plural 0
-STR_GENERAL_DESC        :OpenMSX OpenTTD இற்கு இசை மாற்று தொகுப்பாகும். இலவசமாக கிடைக்கிறது GPL v2 அனுமதியின்கீழ். மேலும் அறிய பார்க்க "readme.txt" [{TITLE}]
+STR_GENERAL_DESC        :OpenMSX OpenTTD இன் இசை மாற்று தொகுப்பாகும். GPL v2 உரிமத்தின் கீழ் இலவசமாகக் கிடைக்கிறது. முழு மதிப்புகளுக்காக  "readme.txt"-ஐ பார்க்கவும்.[{TITLE}]
