Update: Translations from eints arabic (egypt): 1 change by Houssem-Guemer

--- a/lang/arabic_egypt.lng
+++ b/lang/arabic_egypt.lng
@@ -1,3 +1,3 @@
 ##grflangid 0x14
 ##plural 1
-STR_GENERAL_DESC        :OpenMSXمجموعة موسيقى بديلة لـ OpenTTD. متاحة مجانا تحت نظام النسخة الثانية من الرخص الشعبية العامة GNU . لتفاصيل الكاملة اقرا "readme.txt". [{TITLE}]
+STR_GENERAL_DESC        :OpenMSXمجموعة الموسيقى الأساسية لـ OpenTTD. متاحة مجانا تحت نظام النسخة الثانية من الرخص الشعبية العامة GPL . لتفاصيل الكاملة اقرا "readme.txt". [{TITLE}]
