Update: Translations from eints japanese: 1 change by akaregi

--- a/lang/japanese.lng
+++ b/lang/japanese.lng
@@ -1,3 +1,3 @@
 ##grflangid 0x39
 ##plural 1
-STR_GENERAL_DESC        :OpenMSX は OpenTTD のための音楽置き換えセットです。GPL v2の規約の下で自由に利用できます。正式なクレジットは "readme.txt" を見てください [{TITLE}]
+STR_GENERAL_DESC        :OpenTTD 用の OpenMSX 音楽セット。GPL v2 に基づいて自由に利用できます。完全なクレジットは "readme.txt" を参照してください。 [{TITLE}]
