--- a/lang/croatian.lng
+++ b/lang/croatian.lng
@@ -2,4 +2,4 @@
 ##plural 6
 ##gender middle male female
 ##case nom lok aku vok dat ins gen
-STR_GENERAL_DESC        :OpenMSX zamjenski muzički set za OpenTTD. Dostupan besplatno pod uvjetima GPL v2 licence. Za sve zasluge vidi "readme.txt". [{TITLE}]
+STR_GENERAL_DESC        :OpenMSX osnovni glazbeni set za OpenTTD. Slobodno dostupno pod uvjetima GPL v2 licence. Za sve zasluge vidi "readme.txt". [{TITLE}]
