Update: Translations from eints galician: 1 change by mgtrad

--- a/lang/galician.lng
+++ b/lang/galician.lng
@@ -1,4 +1,4 @@
 ##grflangid 0x31
 ##plural 0
 ##gender m n f
-STR_GENERAL_DESC        :Conxunto básico de música OpenMSX para OpenTTD. Dispoñible gratuitamente baixo os termos da GPL v2. Para ver os créditos o completo consulta o "readme.txt" [{TITLE}]
+STR_GENERAL_DESC        :Conxunto básico de música OpenMSX para OpenTTD. Dispoñible de xeito gratuito segundo os termos da Licenza Pública Xeral v2. Consulta o "readme.txt" para ver todos os créditos [{TITLE}]
