Update: Translations from eints chinese (simplified): 1 change by translators indonesian: 1 change by translators italian: 1 change by translators catalan: 1 change by translators french: 1 change by translators polish: 1 change by translators

--- a/lang/french.lng
+++ b/lang/french.lng
@@ -1,4 +1,4 @@
 ##grflangid 0x03
 ##plural 2
 ##gender f m m2
-STR_GENERAL_DESC        :Musiques OpenMSX pour OpenTTD. Disponible librement selon les termes de la licence GNU General Public Licence version 2. Pour les crédits complets voir "readme.txt". [{TITLE}]
+STR_GENERAL_DESC        :Musiques OpenMSX pour OpenTTD. Disponible librement selon les termes de la licence GPL v2. Pour consulter l'intégralité les crédits, consultez "readme.txt" [{TITLE}]
