--- a/lang/catalan.lng
+++ b/lang/catalan.lng
@@ -1,4 +1,4 @@
 ##grflangid 0x22
 ##plural 0
 ##gender Masculin Femenin
-STR_GENERAL_DESC        :Joc base de música OpenMSX per a l'OpenTTD. Disponible lliurement sota els termes de la GNU General Public License versió 2. Per veure la llista de col·laboradors, vegeu el fitxer "readme.txt". [{TITLE}]
+STR_GENERAL_DESC        :Joc base de música OpenMSX per a l'OpenTTD. Disponible lliurement sota els termes de la GPL v2. Per veure la llista sencera de crèdits vegeu el fitxer "readme.txt" [{TITLE}]
