--- a/lang/italian.lng
+++ b/lang/italian.lng
@@ -2,4 +2,4 @@
 ##plural 0
 ##gender ma m f
 ##case fp fs mp ms
-STR_GENERAL_DESC        :Pacchetto musicale sostitutivo OpenMSX per OpenTTD. Liberamente disponibile secondo i termini della licenza GPL v2. Per l'elenco completo dei riconoscimenti, vedasi "readme.txt". [{TITLE}]
+STR_GENERAL_DESC        :OpenMSX è il pacchetto musicale base per OpenTTD. Liberamente disponibile secondo i termini della licenza GPL v2. Per l'elenco completo dei riconoscimenti, vedasi "readme.txt". [{TITLE}]
