--- a/lang/hebrew.lng
+++ b/lang/hebrew.lng
@@ -2,4 +2,4 @@
 ##plural 0
 ##gender m f
 ##case gen plural singular
-STR_GENERAL_DESC        :OpenMSX היא חבילת הבסיס למוזיקה ב OpenTTD. מופץ תחת רשיון GNU General Public License v2. מידע מלא וקרדיטים ניתן למצוא בקובץ "readme.txt" [{TITLE}]
+STR_GENERAL_DESC        :OpenMSX היא חבילת הבסיס למוזיקה ב OpenTTD. מופץ באופן חופשי תחת רשיון GNU General Public License v2. מידע מלא וקרדיטים ניתן למצוא בקובץ "readme.txt" [{TITLE}]
