--- a/lang/polish.lng
+++ b/lang/polish.lng
@@ -2,4 +2,4 @@
 ##plural 7
 ##gender n m f
 ##case c b d m n w
-STR_GENERAL_DESC        :OpenMSX to podstawowy zestaw muzyki do OpenTTD. Swobodnie dostępny na warunkach licencji GNU GPL v2. Pełne informacje można znaleźć w pliku „readme.txt”. [{TITLE}]
+STR_GENERAL_DESC        :OpenMSX to podstawowy zestaw muzyki do OpenTTD. Swobodnie dostępny na warunkach licencji GNU GPL v2. Pełne informacje można znaleźć w pliku „readme”. [{TITLE}]
