--- a/lang/danish.lng
+++ b/lang/danish.lng
@@ -1,3 +1,3 @@
 ##grflangid 0x2d
 ##plural 0
-STR_GENERAL_DESC        :OpenMSX base-musiksæt til OpenTTD. Frit tilgængeligt under betingelserne for GNU General Public License version 2. For den fuldstændige kreditering, se "readme.txt" [{TITLE}]
+STR_GENERAL_DESC        :OpenMSX basismusiksæt til OpenTTD. Frit tilgængelig under betingelserne i GPL v2. For fuld kredit, se "readme.txt" [{TITLE}]
