Update: Translations from eints lithuanian: 1 change by dziugas1959

--- a/lang/lithuanian.lng
+++ b/lang/lithuanian.lng
@@ -2,4 +2,4 @@
 ##plural 5
 ##gender vyr mot
 ##case ka kam kas ko kreip kuo kur
-STR_GENERAL_DESC        :OpenMSX — tai muzikos rinkinys, skirtas OpenTTD. Laisvai prieinamas pagal GPL v2 licenciją. Daugiau informacijos rasite „readme.txt“ faile. [{TITLE}]
+STR_GENERAL_DESC        :„OpenMSX“ – tai muzikos rinkinys, skirtas „OpenTTD“. Laisvai prieinamas pagal „GPL v2“ licenciją. Daugiau informacijos rasite „readme.txt“ faile. [{TITLE}]
