--- a/lang/finnish.lng
+++ b/lang/finnish.lng
@@ -1,3 +1,3 @@
 ##grflangid 0x35
 ##plural 0
-STR_GENERAL_DESC        :OpenMSX-perusmusiikkipaketti OpenTTD:lle. Vapaasti saatavilla GPL v2 -lisenssillä. Kaikki tekijät "readme.txt"-tiedostossa. [{TITLE}]
+STR_GENERAL_DESC        :OpenMSX-perusmusiikkipaketti OpenTTD:lle. Vapaasti saatavilla GPL v2 -lisenssin ehdoilla. Kaikki tekijät Readme-tiedostossa. [{TITLE}]
